# FixDateTime

./: .gitignore  LICENSE  README.md  fix_date_time.py  fix_datetime.spec  pyproject.toml  requirements.txt
src/: fix_date_time.py
src/config/: __init__.py  config.toml
