[project]
name = "fix_datetime"
description = "Simple CLI to fix date time in excel files"
version = "0.1.0"
authors = [
    { name = "Casey C", email = "kcx1codes@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openpyxl",
    "pyarrow",
    "pandas",
]


[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["config*"]

[tool.setuptools.package-dir]
""="src"

[project.scripts]
fix_datetime= "fix_date_time:main"

[tool.black]
line-length = 120
target-version = ['py37', 'py38']
